Add websockets, Display ships when players connect, fill player ship

--- a/public/styles.css
+++ b/public/styles.css
@@ -56,4 +56,10 @@ svg .bounding-rect {
 
 svg .ship {
   stroke-width: 1;
+  stroke: currentColor;
+  fill: transparent;
+}
+
+svg .ship.playerShip {
+  fill: currentColor;
 }
