Make collectible points a different color than the other AsteroidsMake collectible points a different color than the other Asteroids - resolves #5

--- a/public/styles.css
+++ b/public/styles.css
@@ -69,7 +69,6 @@ svg .vector-text.text-start {
 }
 
 svg .ship {
-  stroke: currentColor;
   fill: transparent;
 }
 
@@ -88,5 +87,5 @@ svg .hit {
 }
 
 svg .asteroid.consumable {
-  stroke: #0f0;
+  color: #0f0;
 }
