Add game timer and reset mechanic, Add timer display; - Fix issue where vector-text would not update when props change - Resolves #1

--- a/public/styles.css
+++ b/public/styles.css
@@ -58,14 +58,8 @@ svg .vector-text {
   fill: transparent;
 }
 
-svg .vector-text.text-player {
+svg .vector-text.text-timer {
   color: #f00;
-}
-svg .vector-text.text-highscore {
-  color: #0f0;
-}
-svg .vector-text.text-start {
-  color: #00f;
 }
 
 svg .ship {
