--- a/public/styles.css
+++ b/public/styles.css
@@ -45,6 +45,7 @@ svg {
   width: 100%;
   height: 100%;
   color: #fff;
+  fill: transparent;
 }
 
 svg * {
@@ -53,6 +54,7 @@ svg * {
   vector-effect: non-scaling-stroke;
   stroke-width: 0.25vmin;
   stroke: currentColor;
+  fill: inherit;
 }
 
 svg .vector-text {
@@ -63,10 +65,6 @@ svg .vector-text.text-timer {
   color: #f00;
 }
 
-svg .ship {
-  fill: transparent;
-}
-
 svg .ship.playerShip {
   fill: currentColor;
 }
@@ -74,7 +72,6 @@ svg .ship.playerShip {
 svg .asteroid {
   stroke-width: 0.025rem;
   color: #fff;
-  fill: transparent;
 }
 
 svg .hit {
