--- a/public/styles.css
+++ b/public/styles.css
@@ -65,6 +65,21 @@ svg .vector-text.text-timer {
   color: #f00;
 }
 
+svg .track .bounds.outer {
+  color: #ff0;
+}
+svg .track .bounds.inner {
+  color: #f0f;
+}
+svg .track .tangents {
+  color: #f00;
+  opacity: 0.2;
+}
+svg .track .center {
+  color: #00f;
+  opacity: 0.2;
+}
+
 svg .countdown-tick {
   color: currentColor;
   opacity: 0.5;
